--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
           
 </head>
 <body>
-<table>
-<thead>
-<tr>
-  <th>Link</th>
-  <th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-  <td><a href='http://34.208.37.39:9999'>Jupyter Notebooks</a></td>
-  <td>A python enabled notebook for remote usage.</td>
-</tr>
-</tbody>
+    <div class='container'>
+        <table>
+        <thead>
+            <tr>
+              <th>Link</th>
+              <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td><a href='http://34.208.37.39:9999'>Jupyter Notebooks</a></td>
+              <td>A python enabled notebook for remote usage.</td>
+            </tr>
+        </tbody>
+        </table>
+    </div>
 </body>
 </html>
