--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
               <td><a href='http://34.208.37.39:9999'>Jupyter Notebooks</a></td>
               <td>A python enabled notebook for remote usage.</td>
             </tr>
+            <tr>
+              <td><a href='http://34.208.37.39:8787'>R Notebook</a></td>
+              <td>An R enabled notebook for remote usage.</td>
+            </tr>
         </tbody>
         </table>
     </div>
