--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
               <td><a href='http://34.208.37.39:8787'>R Notebook</a></td>
               <td>An R enabled notebook for remote usage.</td>
             </tr>
+            <tr>
+              <td><a href='http://52.43.32.181:3002'>Docuserver</a></td>
+              <td>A lightweight document server.</td>
+            </tr>
+             <tr>
+              <td><a href='http://52.43.32.181:3000'>Qs</a></td>
+              <td>A system for knowledge maintainence.</td>
+            </tr>
         </tbody>
         </table>
     </div>
