--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class='container'>
         <h3>Welcome</h3>
     </div>
-    <div class='container'>
+    <div class='container' id='mainTable'>
         <table>
         <thead>
             <tr>
@@ -39,5 +39,22 @@
         </tbody>
         </table>
     </div>
+    <script>
+        var table = document.getElementById('mainTable')
+        var entries = [
+            {name:'Jupyter Notebooks', url:'34.208.37.39:9999',desc:'A python enabled notebook for remote usage.'},
+            {name:'R Notebook', url:'34.208.37.39:8787',desc:'An R enabled notebook for remote usage.'},
+            {name:'Docuserver', url:'52.43.32.181:3002',desc:'A lightweight document server.'},
+            {name:'Qs', url:'52.43.32.181:3000',desc:'A system for knowledge maintainence'},
+            ]
+        entries.forEach( (entryDict, index) => {
+            var row = table.insertRow();
+            var rowContents = {}
+            for (var key in entryDict) {
+                rowContents[key] = insertCell()
+                rowContents[key].innerHTML = entryDict[key]
+            }
+        })
+    </script>
 </body>
 </html>
