--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class='container'>
         <h3>Welcome</h3>
     </div>
-    <div class='container' id='mainTable'>
-        <table>
+    <div class='container'>
+        <table id='mainTable'>
         <thead>
             <tr>
               <th>Link</th>
