--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </table>
     </div>
     <script>
+        function reqListener() {console.log(this.responseText)}
         var table = document.getElementById('mainTable')
         var entries = [
             {name:'Jupyter Notebooks', url:'34.208.37.39:9999',desc:'A python enabled notebook for remote usage.'},
@@ -36,6 +37,10 @@
             entriesFormatted.push({link:'<a href="http://'+entryDict.url+'">'+entryDict.name+'</a>',desc:entryDict.desc})
         })
         entriesFormatted.forEach( (entryDict, index) => {
+            var req = new XMLHttpRequest()
+            req.addEventListener("load", reqListener)
+            req.open("GET", "http://"+entries[index].url)
+            req.send();
             var row = table.insertRow();
             var rowContents = {}
             for (var key in entryDict) {
